# system-c2

./: .gitignore  LICENSE  README.md  deploy  esbuild.config.mjs  manifest.json  package-lock.json  package.json  pkg.pkg.json  shell.nix
app/: page.tsx
app/api/callbackObsidian/: route.tsx
cli/: Cargo.toml
common/: package.json
common/src/: instant.perms.ts  instant.schema.ts
next-app/: package-lock.json  package.json
obsidian/: AppReactView.tsx  plugin.ts
obsidian-plugin/: deploy  package-lock.json  package.json
obsidian-plugin/src/: plugin.ts
server/: package-lock.json  package.json
server/components/: TestComponent.tsx
src/: main.rs  obsidian-plugin.ts
